--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/chart/config_parallel.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/chart/config_parallel.html
@@ -1,4 +1,4 @@
-<div>
+<div id="parallel_content">
   <form class="form-horizontal">
     <div class="form-group">
       <label class="col-sm-3 control-label">Add Axis</label>
@@ -6,7 +6,7 @@
         <div class="input-group" title="From Source">
           <span class="input-group-addon" id="basic-addon2">
             <i class="fa fa-gear" aria-hidden="true"></i>&nbsp;</span>
-          <input id="add_axis_input" type="text" class="form-control" placeholder="Axis Value" aria-describedby="basic-addon2">
+            <input id="add_axis_input" type="text" class="form-control" placeholder="Axis Value" aria-describedby="basic-addon2" data-bind="value: axis">
         </div>
       </div>
       <div class="col-sm-2">
@@ -19,10 +19,10 @@
         <div class="input-group" title="From Source">
           <span class="input-group-addon" id="basic-addon2">
             <i class="fa fa-key" aria-hidden="true"></i>&nbsp;</span>
-          <input id="add_name_input" type="text" class="form-control" placeholder="Source Name" aria-describedby="basic-addon2">
+            <input id="add_name_input" type="text" class="form-control" placeholder="Source Name" aria-describedby="basic-addon2" data-bind="value:name">
         </div>
         <div class="input-group" title="From Source">
-          <textarea id="add_value_input" rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;"></textarea>
+            <textarea id="add_value_input" rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;" data-bind="value:series"></textarea>
         </div>
       </div>
       <div class="col-sm-2">
@@ -47,6 +47,15 @@
 
 
 <script>
+    var parallelViewModel = {
+        axis: ko.observable(''),
+        name: ko.observable(''),
+        series: ko.observable('')
+    }
+    
+    ko.cleanNode($('#parallel_content'))
+    ko.applyBindings(parallelViewModel, document.getElementById('parallel_content'))
+    
   function add_series_data() {
     var data_name = $('#add_name_input').val();
     var data_value = $('#add_value_input').val().split(',');
