--- a/generic_charting_client/src/main/webapp/assets/self-owned/html/chart/config_radar.html
+++ b/generic_charting_client/src/main/webapp/assets/self-owned/html/chart/config_radar.html
@@ -1,4 +1,4 @@
-<div>
+<div id="radar_content">
   <form class="form-horizontal">
 
     <div class="form-group">
@@ -66,7 +66,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Indicator</label>
       <div class="col-sm-7">
-        <textarea id="indicator_value_input" rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;"></textarea>
+          <textarea id="indicator_value_input" rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;" data-bind="value:indicator"></textarea>
       </div>
 
       <div class="col-sm-1">
@@ -76,7 +76,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Series</label>
       <div class="col-sm-7">
-        <textarea id="nodes_value_input" rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;"></textarea>
+          <textarea id="nodes_value_input" rows="3" class="form-control" style="margin: 0px -22px 15px 0px; height: 180px;" data-bind="value:series"></textarea>
       </div>
 
       <div class="col-sm-1">
@@ -88,6 +88,13 @@
 
 
 <script>
+var radarViewModel = {
+    indicator:  ko.observable(''),
+    series: ko.observable('')
+}
+
+ko.cleanNode($('#radar_content'))
+ko.applyBindings(radarViewModel,document.getElementById('radar_content'))
 
 function add_radar_indicator() {
   var indicator_name = $('#add_indicator_name_input').val();
@@ -166,6 +173,7 @@ function reset_indicator() {
     if (chartViewModel && chartViewModel.chart) {
       var i = chartViewModel.chart.getOption().radar[0].indicator;
       var d = chartViewModel.chart.getOption().series[0].data;
+      
       chartViewModel.chart = Radar_ChartPOJO.initialize_chart(chartViewModel.chart,tmp,i);
     }
   }
